# rigi-analysis

./: .gitignore  README.md  environment.yml  pyproject.toml
docs/: README.md
docs/mutation/: README.md  parallel.md
docs/sv/: README.md  conventions.md  install.md  install_annotsv.md  install_manta.md  pipeline_diagram.md
examples/setup/: install_annotsv.sh  install_manta.sh
final codes SV/: 02_sv_temporal.py  03_SV_landscape.py  04_repeat_analysis.py  06_sv_type_specific_decay.py  08_sv_mut_vizualization.py  README.md  fig1.md  install_annotsv.txt  install_manta.txt  requirements.txt
final codes SV/docs/: Install.md  conventions.md
final codes_mutation/: Readme.md  annotation_preprocessing.py  control_vs_radiation_mut.py  create_mutation_catalog.py  mutation_preprocessing.py  parallel_pattern_assignment.py  readme_mutation.md  render_sankey.py  requirements.txt
final codes_mutation/docs/: Patterns.md
original/final codes SV/: 01_filter_pass.py  05_sv_mutation_correlation.py  12_fetch_annotations.py  14_dose_based_visualize.py  fast_dbs_search.py
original/final codes_mutation/: compute_sankey.py  mutation_pattern_assignment.py  parallel_annotate.py
original/final codes_mutation/docs/: file_formats.md  parallel.md
src/rigi_analysis/: __init__.py
src/rigi_analysis/mutation/: __init__.py  annotation_preprocessing.py  compute_sankey.py  control_vs_radiation_mut.py  create_mutation_catalog.py  merge_annotation.py  mutation_annotation.py  mutation_pattern_assignment.py  mutation_preprocessing.py  parallel_annotate.py  parallel_pattern_assignment.py  render_sankey.py  sigprofiler.py
src/rigi_analysis/sv/: SV_landscape.py  __init__.py  categorise_genes.py  dose_based_visualize.py  dose_stratified.py  fast_dbs_search.py  fetch_annotations.py  filter_pass.py  inversion_size_analysis.py  repeat_analysis.py  sv_mut_vizualization.py  sv_mutation_correlation.py  sv_temporal.py  sv_type_specific_decay.py  temporal_concordance.py  temporal_concordance_viz.py
src/rigi_analysis/utils/: cli.py  datetime_utils.py  decompress_vcf.py
src/rigi_analysis/workflows/: __init__.py  backend.py  full_workflow.py  mutation_workflow.py  sv_workflow.py
tests/: conftest.py  test_cli.py  test_decompress_vcf.py  test_full_workflow.py  test_mutation_workflow.py  test_sv_workflow.py
