[build-system]
requires = [
    "setuptools>=80",
    "setuptools-scm[simple]>=9.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "rigi-analysis"
dynamic = ["version"]
description = "Spatio-Temporal Analysis of Radiation-Induced Genomic Instability"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Kriti Chopra" },
]
keywords = [
    "genomics", 
    "mutagenesis", 
    "radiation", 
    "bioinformatics", 
    "NGS"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.10",
    "intervaltree>=3.1.0",
    "requests>=2.28",
    "dask[dataframe]>=2023.1.0",
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "joblib",
    "SigProfilerMatrixGenerator>=1.2.25",
    "SigProfilerExtractor>=1.1.24",
    # Pythonic wrapper for HTSlib C-API
    "pysam",
    # Workflow orchestration
    "rhapsody-py[dask]~=0.4.0",
    "radical.asyncflow~=0.5.0"
]

[project.optional-dependencies]

gpu = [
    "torch",
    "torchvision",
    "torchaudio"
]

dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.15.0",
]

[project.urls]
Homepage = "https://github.com/BNL-LUCID/rigi-analysis"
Repository = "https://github.com/BNL-LUCID/rigi-analysis.git"
"Bug Tracker" = "https://github.com/BNL-LUCID/rigi-analysis/issues"

[project.scripts]
rigi-analysis-run = "rigi_analysis.utils.cli:main"
rigi-analysis-vcf-decompress = "rigi_analysis.utils.decompress_vcf:main"
rigi-analysis-workflow = "rigi_analysis.workflows.full_workflow:main"
rigi-analysis-workflow-mutation = "rigi_analysis.workflows.mutation_workflow:main"
rigi-analysis-workflow-sv = "rigi_analysis.workflows.sv_workflow:main"

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "D"]
ignore = ["D202"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
